PixelWalker copy bot changelog

2025-07-19 Version 1.4.1
- Bot: .move mode now does not get disabled anymore when new area is selected.
- Bot: Improved .move mode block placement speed a little.

2025-07-09 Version 1.4.0
- Bot: Added command ".edit name find replace" - edits selected block name substrings from "find" to "replace". Thanks Bluecloud!
- Bot: Added command ".edit math_op number [name_find]" - edits selected block number arguments. Thanks Bluecloud!
- Bot: Made .smartpaste command work with portals again. It only works if portal IDs are integers.
- Website: Added loading overlay when navigating between menu pages.

2025-07-06 Version 1.3.2
- Bot: Fixed an issue where move operation was not performed correctly in some cases
- Bot: Fixed an issue where move operation would take a long time for large selected area

2025-07-03 Version 1.3.1
- Bot: Updated to work with PixelWalker version 0.22.0-alpha

2025-06-23 Version 1.3.0
- Website: Added an option to import PNGs into the world as hex-backgrounds. Thanks Bluecloud!
- Website: Added an option to import MIDI files into the world. Currently only accepts piano midis. Thanks Bluecloud!

2025-06-22 Version 1.2.2
- Website: Dev mode tools are properly hidden when dev mode is disabled

2025-06-20 Version 1.2.1
- Bot: .import now works with .mask
- Bot: .import is now undoable

2025-06-20 Version 1.2.0
- Website: Remade website layout

2025-05-28 Version 1.1.0
- Bot: Improved .move command, allowing it to continuously move selected blocks non-destructively
- Bot: Added .mask command, that allows to filter which layer blocks get pasted

2025-05-27 Version 1.0.16
- Bot: Fix .move command not shown in .help list

2025-05-22 Version 1.0.15
- Bot: Added .move command that moves blocks when pasting

2025-05-19 Version 1.0.14
- Bot: Updated to work with PixelWalker version 0.21.0-alpha

2025-05-18 Version 1.0.13