@@ -3,6 +3,7 @@ PixelWalker copy bot changelog
 2025-07-19 Version 1.4.1
 - Bot: .move mode now does not get disabled anymore when new area is selected.
 - Bot: Improved .move mode block placement speed a little.
+- Bot: Fixed an issue where bot would not place blocks when they were pasted not within bounds of world.
 
 2025-07-09 Version 1.4.0
 - Bot: Added command ".edit name find replace" - edits selected block name substrings from "find" to "replace". Thanks Bluecloud!
